--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             --main-bg: #f0f0f0; 
             --text-main: #333333;
             --sub-gray: #808080;
-            --bar-bg: #333333; /* バーの色を#333333に固定 */
+            --bar-bg: #333333; 
         }
 
         body { font-family: sans-serif; background: var(--main-bg); margin: 0; color: var(--text-main); -webkit-tap-highlight-color: transparent; }
@@ -27,16 +27,15 @@
         .formation-list-bg.show { display: block; }
         .direction-label { color: var(--sub-gray); font-size: 11px; margin-bottom: 25px; display: flex; justify-content: space-between; font-weight: bold; }
 
-        /* --- 車体表示の共通設定（位置上げ） --- */
         .mini-car-body, .detail-car-body { 
             background-size: contain;
             background-repeat: no-repeat;
             background-position: bottom;
         }
 
-        /* --- 編成表（トップ画面） --- */
-        .formation-row { display: flex; align-items: center; gap: 8px; margin-bottom: 20px; cursor: pointer; }
-        .f-name-tag { background: none; color: var(--text-main); padding: 2px 4px; font-weight: bold; min-width: 35px; text-align: center; font-size: 13px; }
+        /* --- 編成表（トップ画面）レイアウト修正 --- */
+        .formation-row { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; cursor: pointer; }
+        .f-name-tag { background: none; color: var(--text-main); font-weight: bold; min-width: 45px; text-align: center; font-size: 14px; flex-shrink: 0; }
         
         .car-mini-list { display: flex; gap: 4px; align-items: flex-end; }
         .mini-car-container { position: relative; width: 68px; height: 48px; }
@@ -122,7 +121,6 @@
 let allData = [];
 const PANTA_MAP = { '◇': 'p0', '＜': 'p1', '＞': 'p2', '<': 'py1', '>': 'py2' };
 
-// 日付変換（範囲指定対応）
 function formatDateJP(dateStr) {
     if (!dateStr || dateStr === "") return "";
     if (dateStr.includes('-')) {
@@ -141,7 +139,6 @@ function formatDateJP(dateStr) {
     return dateStr;
 }
 
-// スタンプ（複数対応）
 function getStampsHTML(stampStr, className, folder = 'stamp') {
     if (!stampStr) return '';
     return stampStr.split(',').map(s => {
@@ -150,12 +147,11 @@ function getStampsHTML(stampStr, className, folder = 'stamp') {
     }).join('');
 }
 
-// 車体表示ハイブリッド
 function getBodyStyle(c) {
-    if (c.車体色 && c.車体色.trim() !== "") {
+    if (c.車体色 && c.車体色.trim() !== "" && c.車体色 !== "なし") {
         return `background-color:${c.車体色}; -webkit-mask-image: url('body/${c.車体アイコン}.png'); mask-image: url('body/${c.車体アイコン}.png');`;
     } else {
-        return `background-image: url('body/${c.車体アイコン}.png'); -webkit-mask-image: none; mask-image: none;`;
+        return `background-image: url('body/${c.車体アイコン}.png'); -webkit-mask-image: none; mask-image: none; background-color: transparent;`;
     }
 }
 
@@ -237,7 +233,7 @@ function renderDetail(name) {
             <div class="car-visual-row">
                 <div class="car-img-container">
                     ${c.左パンタ?`<img src="body/${PANTA_MAP[c.左パンタ]||'p1'}.png" class="panta-detail panta-left">`:''}
-                    ${c.rightパンタ||c.右パンタ?`<img src="body/${PANTA_MAP[c.右パンタ]||'p1'}.png" class="panta-detail panta-right">`:''}
+                    ${c.右パンタ?`<img src="body/${PANTA_MAP[c.右パンタ]||'p1'}.png" class="panta-detail panta-right">`:''}
                     <div class="detail-car-body" style="${getBodyStyle(c)}"></div>
                     <div class="car-no-inline">${c.車両番号}</div>
                     ${c.左台車?`<img src="body/${c.左台車}.png" class="bogie bogie-left">`:''}
