--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         .mini-car-container { position: relative; width: 68px; height: 48px; }
         .mini-panta { position: absolute; left: 8px; top: 6px; width: 10px; z-index: 5; }
         
-        /* 色塗りを廃止し、画像をそのまま表示する設定 */
         .mini-car-body { 
             width: 100%; height: 28px; position: absolute; bottom: 10px; z-index: 10;
             background-size: contain; background-repeat: no-repeat; background-position: bottom;
@@ -63,7 +62,6 @@
         .car-visual-row { display: flex; align-items: center; gap: 12px; }
         .car-img-container { position: relative; width: 180px; height: 85px; flex-shrink: 0; }
         
-        /* 詳細画面も画像をそのまま表示 */
         .detail-car-body { 
             width: 100%; height: 55px; position: absolute; bottom: 14px; z-index: 10;
             background-size: contain; background-repeat: no-repeat; background-position: center;
@@ -126,6 +124,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 <script>
 let allData = [];
+// パンタグラフのファイル名マップ
 const PANTA_MAP = { '◇': 'p0', '＜': 'p1', '＞': 'p2', '<': 'py1', '>': 'py2' };
 
 function formatDateJP(dateStr) {
@@ -198,7 +197,7 @@ function renderTop() {
                 const no = c.車両番号.split('-').pop();
                 const pKey = c.左パンタ || c.右パンタ;
                 h += `<div class="mini-car-container">
-                    ${pKey ? `<img src="body/${PANTA_MAP[pKey]||'p1'}.png" class="mini-panta">` : ''}
+                    ${pKey ? `<img src="parts/${PANTA_MAP[pKey]||'p1'}.png" class="mini-panta">` : ''}
                     <div class="mini-car-body" style="background-image: url('body/${c.車体アイコン}.png');"></div>
                     <div class="mini-info-in-body">${getRyaku(c.車両番号)}${no}</div>
                 </div>`;
@@ -233,12 +232,12 @@ function renderDetail(name) {
         cCon.innerHTML += `<div class="car-unit">
             <div class="car-visual-row">
                 <div class="car-img-container">
-                    ${c.左パンタ ? `<img src="body/${PANTA_MAP[c.左パンタ]||'p1'}.png" class="panta-detail panta-left">` : ''}
-                    ${c.右パンタ ? `<img src="body/${PANTA_MAP[c.右パンタ]||'p1'}.png" class="panta-detail panta-right">` : ''}
+                    ${c.左パンタ ? `<img src="parts/${PANTA_MAP[c.左パンタ]||'p1'}.png" class="panta-detail panta-left">` : ''}
+                    ${c.右パンタ ? `<img src="parts/${PANTA_MAP[c.右パンタ]||'p1'}.png" class="panta-detail panta-right">` : ''}
                     <div class="detail-car-body" style="background-image: url('body/${c.車体アイコン}.png');"></div>
                     <div class="car-no-inline">${c.車両番号}</div>
-                    ${c.左台車?`<img src="body/${c.左台車}.png" class="bogie bogie-left">`:''}
-                    ${c.右台車?`<img src="body/${c.右台車}.png" class="bogie bogie-right">`:''}
+                    ${c.左台車?`<img src="parts/${c.左台車}.png" class="bogie bogie-left">`:''}
+                    ${c.右台車?`<img src="parts/${c.右台車}.png" class="bogie bogie-right">`:''}
                 </div>
                 <div class="car-meta"><div>${c.製造所}</div><div>${formatDateJP(c.落成日)}</div></div>
             </div>
