--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         .mini-car-body { width: 100%; height: 28px; position: absolute; bottom: 10px; z-index: 10; background-size: contain; background-repeat: no-repeat; background-position: bottom; }
         .mini-info-in-body { position: absolute; bottom: 14px; width: 100%; text-align: center; z-index: 20; color: white; font-weight: bold; font-size: 8px; text-shadow: 1px 1px 1px rgba(0,0,0,0.8); white-space: nowrap; pointer-events: none; }
 
-        /* --- 個別詳細ページのデザイン --- */
         .section-title { font-size: 16px; font-weight: bold; margin-bottom: 12px; color: var(--text-main); }
         .detail-info-box { padding: 20px; color: var(--text-main); line-height: 1.6; font-size: 14px; }
         .info-row { display: flex; margin-bottom: 5px; }
@@ -166,8 +165,8 @@ function renderTop() {
                     ${rp ? `<img src="parts/${rp}.png" class="mini-panta mini-panta-r ${rp.startsWith('py') ? 'low-panta' : ''}">` : ''}
                     <div class="mini-car-body" style="background-image: url('body/${c.車体アイコン}.png');"></div>
                     <div class="mini-info-in-body">${ryaku}${lastNo}</div>
-                    ${c.leftBogie ? `<img src="parts/${c.leftBogie}.png" class="mini-bogie mini-bogie-l">` : (c.左台車 ? `<img src="parts/${c.左台車}.png" class="mini-bogie mini-bogie-l">` : '')}
-                    ${c.rightBogie ? `<img src="parts/${c.rightBogie}.png" class="mini-bogie mini-bogie-r">` : (c.右台車 ? `<img src="parts/${c.右台車}.png" class="mini-bogie mini-bogie-r">` : '')}
+                    ${c.左台車 ? `<img src="parts/${c.左台車}.png" class="mini-bogie mini-bogie-l">` : ''}
+                    ${c.右台車 ? `<img src="parts/${c.右台車}.png" class="mini-bogie mini-bogie-r">` : ''}
                 </div>`;
             });
             row.innerHTML = h + `</div>`;
@@ -209,10 +208,8 @@ function renderDetail(name) {
         </div>`;
     });
 
-    // 車歴の描画
     const hList = document.getElementById('history-list');
     hList.innerHTML = '';
-    // 1～10までの車歴列をチェック
     for (let i = 1; i <= 10; i++) {
         const date = top[`車歴${i}(日付)`];
         if (date) {
