--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
         
         .header { background: var(--header-bg); color: white; padding: 15px; display: flex; align-items: center; gap: 10px; font-size: 1.1rem; position: sticky; top: 0; z-index: 100; }
 
-        /* 会社バー（旧形式バーのデザインを維持） */
+        /* 会社・形式バー */
         .system-section { background: var(--bar-bg); color: white; padding: 12px 15px; display: flex; align-items: center; justify-content: space-between; margin-top: 1px; cursor: pointer; }
         .system-title { display: flex; align-items: center; gap: 10px; font-weight: bold; }
+        .system-icon { width: 35px; height: 35px; background: white; border-radius: 4px; object-fit: contain; flex-shrink: 0; }
         .arrow { transition: transform 0.3s; font-size: 12px; }
 
         .formation-list-bg { padding: 15px 10px; display: none; }
         .formation-list-bg.show { display: block; }
 
-        /* 路線系統行（旧編成行のデザインを維持） */
-        .system-row { display: flex; align-items: center; gap: 10px; margin-bottom: 20px; cursor: pointer; }
-        .system-icon { width: 35px; height: 35px; background: white; border-radius: 4px; object-fit: contain; flex-shrink: 0; }
-        .system-name-label { font-weight: bold; font-size: 14px; color: var(--text-main); }
+        /* 路線系統一覧（テキストのみ） */
+        .line-sys-row { padding: 15px 5px; cursor: pointer; border-bottom: 1px solid #ccc; font-weight: bold; color: var(--text-main); font-size: 15px; }
 
-        /* 編成表表示エリア */
+        /* 編成表表示 */
         .direction-label { color: var(--sub-gray); font-size: 11px; margin-bottom: 25px; display: flex; justify-content: space-between; font-weight: bold; }
         .formation-row { display: flex; align-items: center; gap: 10px; margin-bottom: 25px; cursor: pointer; }
         .f-name-tag { background: none; color: var(--text-main); font-weight: bold; min-width: 45px; text-align: center; font-size: 14px; flex-shrink: 0; }
@@ -52,6 +51,7 @@
         .detail-info-box { padding: 20px; color: var(--text-main); line-height: 1.6; font-size: 14px; }
         .info-row { display: flex; margin-bottom: 5px; }
         .info-label { width: 100px; color: var(--sub-gray); flex-shrink: 0; }
+        .stamp-icon-large { height: 36px; } /* サイズ固定 */
         .divider { height: 1px; background-color: var(--sub-gray); margin: 10px 20px; }
         .car-detail-list { padding: 0 20px; }
         .car-unit { display: flex; flex-direction: column; margin-bottom: 45px; }
@@ -68,7 +68,7 @@
         .bogie-right { right: 25px; }
         .car-meta { font-size: 12px; color: #333333; font-weight: bold; flex-grow: 1; line-height: 1.4; }
         .car-data-row { display: flex; align-items: center; gap: 12px; margin-top: 8px; font-size: 13px; color: #333333; }
-        .stamp-small { height: 32px; }
+        .stamp-small { height: 32px; } /* サイズ固定 */
 
         .history-section { border-top: 1px solid var(--sub-gray); margin-top: 20px; padding: 20px; }
         .history-item { margin-bottom: 18px; }
@@ -89,7 +89,7 @@
 
 <div id="formation-view" class="hidden">
     <div class="header" onclick="showHome()" style="cursor:pointer;">◀ <span id="formation-header-title">系統名</span></div>
-    <div id="formation-content" style="padding: 15px 10px;"></div>
+    <div id="formation-accordion-container"></div>
 </div>
 
 <div id="detail-view" class="hidden">
@@ -98,7 +98,7 @@
         <div class="section-title">編成情報</div>
         <div class="info-row"><span class="info-label">車両形式</span> <span id="info-type"></span></div>
         <div class="info-row"><span class="info-label">所属基地</span> <span id="info-base"></span></div>
-        <div class="info-row"><span class="info-label">ATACS-ID</span> <span id="info-atacs"></span></div>
+        <div class="info-row" id="atacs-row"><span class="info-label">ATACS-ID</span> <span id="info-atacs"></span></div>
         <div id="info-stamps" style="margin-top:12px; display:flex; align-items:center; gap:8px;"></div>
     </div>
     <div class="divider"></div>
@@ -133,7 +133,7 @@ Papa.parse('data.csv', {
     }
 });
 
-// ホーム画面の描画（会社バー）
+// 1. 会社名アコーディオン
 function renderHome() {
     const container = document.getElementById('accordion-container');
     container.innerHTML = '';
@@ -155,20 +155,16 @@ function renderHome() {
         const systems = [...new Set(comData.map(r => r.路線系統))];
 
         systems.forEach(sys => {
-            const firstData = comData.find(r => r.路線系統 === sys);
             const row = document.createElement('div');
-            row.className = 'system-row';
+            row.className = 'line-sys-row';
+            row.innerText = sys;
             row.onclick = () => showFormationList(sys, com);
-            row.innerHTML = `
-                ${firstData.見出しアイコン ? `<img src="icon/${firstData.見出しアイコン}.png" class="system-icon">` : ''}
-                <div class="system-name-label">${sys}</div>
-            `;
             rowsContainer.appendChild(row);
         });
     });
 }
 
-// 編成表画面の描画
+// 2. 系統内・形式別アコーディオン（元の形式バーUI）
 function showFormationList(sysName, comName) {
     currentSystem = sysName;
     currentCompany = comName;
@@ -177,45 +173,59 @@ function showFormationList(sysName, comName) {
     document.getElementById('formation-header-title').innerText = sysName;
     window.scrollTo(0,0);
 
-    const fContent = document.getElementById('formation-content');
+    const fContainer = document.getElementById('formation-accordion-container');
+    fContainer.innerHTML = '';
     const sysData = allData.filter(r => r.路線系統 === sysName && r.会社名 === comName);
-    const first = sysData[0];
+    const forms = [...new Set(sysData.map(r => r.形式))];
 
-    let html = `
-        <div class="direction-label"><span>◀︎${first.左方向||''}</span><span>${first.右方向||''}▶︎</span></div>
-        <div id="formation-rows-box"></div>
-    `;
-    fContent.innerHTML = html;
+    forms.forEach(form => {
+        const formId = `form-${form.replace(/\s+/g, '')}`;
+        const formData = sysData.filter(r => r.形式 === form);
+        const first = formData[0];
 
-    const rowsBox = document.getElementById('formation-rows-box');
-    const names = [...new Set(sysData.map(r => r.編成名))];
+        fContainer.insertAdjacentHTML('beforeend', `
+            <div class="system-section" onclick="toggleSection('${formId}', this)">
+                <div class="system-title">
+                    ${first.見出しアイコン ? `<img src="icon/${first.見出しアイコン}.png" class="system-icon">` : ''}
+                    ${form}
+                </div>
+                <div class="arrow">▼</div>
+            </div>
+            <div id="${formId}" class="formation-list-bg">
+                <div class="direction-label"><span>◀︎${first.左方向||''}</span><span>${first.右方向||''}▶︎</span></div>
+                <div class="rows-box"></div>
+            </div>`);
 
-    names.forEach(name => {
-        const cars = sysData.filter(r => r.編成名 === name).sort((a,b) => a.号車 - b.号車);
-        const row = document.createElement('div');
-        row.className = 'formation-row';
-        row.onclick = () => renderDetail(name);
+        const rowsBox = fContainer.querySelector(`#${formId} .rows-box`);
+        const names = [...new Set(formData.map(r => r.編成名))];
 
-        let h = `<div class="f-name-tag">${name}</div><div class="car-mini-list">`;
-        cars.forEach(c => {
-            const lp = PANTA_MAP[c.左パンタ];
-            const rp = PANTA_MAP[c.右パンタ];
-            const lastNo = c.車両番号 ? c.車両番号.split('-').pop() : "";
-            h += `<div class="mini-car-container">
-                ${lp ? `<img src="parts/${lp}.png" class="mini-panta mini-panta-l ${lp.startsWith('py') ? 'low-panta' : ''}">` : ''}
-                ${rp ? `<img src="parts/${rp}.png" class="mini-panta mini-panta-r ${rp.startsWith('py') ? 'low-panta' : ''}">` : ''}
-                <div class="mini-car-body" style="background-image: url('body/${c.車体アイコン}.png');"></div>
-                <div class="mini-info-in-body">${c.略号||''}${lastNo}</div>
-                ${c.左台車 ? `<img src="parts/${c.左台車}.png" class="mini-bogie mini-bogie-l">` : ''}
-                ${c.右台車 ? `<img src="parts/${c.右台車}.png" class="mini-bogie mini-bogie-r">` : ''}
-            </div>`;
+        names.forEach(name => {
+            const cars = formData.filter(r => r.編成名 === name).sort((a,b) => a.号車 - b.号車);
+            const row = document.createElement('div');
+            row.className = 'formation-row';
+            row.onclick = () => renderDetail(name);
+
+            let h = `<div class="f-name-tag">${name}</div><div class="car-mini-list">`;
+            cars.forEach(c => {
+                const lp = PANTA_MAP[c.左パンタ];
+                const rp = PANTA_MAP[c.右パンタ];
+                const lastNo = c.車両番号 ? c.車両番号.split('-').pop() : "";
+                h += `<div class="mini-car-container">
+                    ${lp ? `<img src="parts/${lp}.png" class="mini-panta mini-panta-l ${lp.startsWith('py') ? 'low-panta' : ''}">` : ''}
+                    ${rp ? `<img src="parts/${rp}.png" class="mini-panta mini-panta-r ${rp.startsWith('py') ? 'low-panta' : ''}">` : ''}
+                    <div class="mini-car-body" style="background-image: url('body/${c.車体アイコン}.png');"></div>
+                    <div class="mini-info-in-body">${c.略号||''}${lastNo}</div>
+                    ${c.leftBogie ? `<img src="parts/${c.leftBogie}.png" class="mini-bogie mini-bogie-l">` : (c.左台車 ? `<img src="parts/${c.左台車}.png" class="mini-bogie mini-bogie-l">` : '')}
+                    ${c.rightBogie ? `<img src="parts/${c.rightBogie}.png" class="mini-bogie mini-bogie-r">` : (c.右台車 ? `<img src="parts/${c.右台車}.png" class="mini-bogie mini-bogie-r">` : '')}
+                </div>`;
+            });
+            row.innerHTML = h + `</div>`;
+            rowsBox.appendChild(row);
         });
-        row.innerHTML = h + `</div>`;
-        rowsBox.appendChild(row);
     });
 }
 
-// 詳細画面の描画
+// 3. 詳細画面（ATACS判定とスタンプサイズ維持）
 function renderDetail(name) {
     document.getElementById('formation-view').classList.add('hidden');
     document.getElementById('detail-view').classList.remove('hidden');
@@ -225,7 +235,16 @@ function renderDetail(name) {
 
     document.getElementById('info-type').innerText = top.形式;
     document.getElementById('info-base').innerText = top.所属基地;
-    document.getElementById('info-atacs').innerText = top["ATACS-ID"] || "-";
+
+    // ATACS-IDが空なら非表示
+    const atacsRow = document.getElementById('atacs-row');
+    if (top["ATACS-ID"] && top["ATACS-ID"].trim() !== "") {
+        atacsRow.classList.remove('hidden');
+        document.getElementById('info-atacs').innerText = top["ATACS-ID"];
+    } else {
+        atacsRow.classList.add('hidden');
+    }
+
     document.getElementById('info-stamps').innerHTML = getStampsHTML(top["編成情報(選択)"], 'stamp-icon-large');
 
     const cCon = document.getElementById('car-details-container');
@@ -256,20 +275,14 @@ function renderDetail(name) {
         hList.innerHTML += `<div class="history-item"><div class="history-top-row"><div class="history-date">${formatDateJP(d)}</div><div class="history-stamp-container">${getStampsHTML(s,'history-stamp','history')}</div></div><div class="history-desc">${t}</div></div>`;
     };
 
-    // 車歴ロジック
     addH(top.落成日, 'rakusei', `${top.製造所 || ''}にて落成。`);
     addH(top.組成日, 'sosei', `${top.所属基地 || ''}にて組成。`);
 
-    // 新製配置の日付判定
-    let shinseiDate = top.甲種輸送日 || top.新製配給日;
-    let shinseiStamp = top.甲種輸送日 ? 'kosyu' : (top.新製配給日 ? 'haikyu' : 'shinsei');
-    if (!shinseiDate && top.新製配置) {
-        shinseiDate = top.落成日;
-        shinseiStamp = 'shinsei';
-    }
-    if (shinseiDate && top.新製配置) {
-        const desc = top["新製(記述)"] || `${top.新製配置}に配置。`;
-        addH(shinseiDate, shinseiStamp, desc);
+    let sDate = top.甲種輸送日 || top.新製配給日;
+    let sStamp = top.甲種輸送日 ? 'kosyu' : (top.新製配給日 ? 'haikyu' : 'shinsei');
+    if (!sDate && top.新製配置) { sDate = top.落成日; sStamp = 'shinsei'; }
+    if (sDate && top.新製配置) {
+        addH(sDate, sStamp, top["新製(記述)"] || `${top.新製配置}に配置。`);
     }
 
     if (top.廃車回送日) addH(top.廃車回送日, 'haikai', (top["廃回(記述)"]||`${top["廃車場所(略称)"]}へ廃車回送。`));
