--- a/index.html
+++ b/index.html
@@ -109,39 +109,44 @@ let currentSystem = "";
 let currentCompany = "";
 const PANTA_MAP = { '◇': 'p0', '＜': 'p1', '＞': 'p2', '<': 'py1', '>': 'py2' };
 
-// 指示通りのすべての日付パターンに対応する変換関数
+// 指示通りの高度な日付変換ロジック
 function formatDateJP(dateStr) {
-    if (!dateStr || dateStr === "") return "";
+    if (!dateStr || dateStr.trim() === "") return "";
     
-    // 単一の日付（YYYY/MM/DD or YYYY/MM）を変換する補助関数
-    const conv = (s) => {
-        const p = s.split('/');
-        if (p.length === 3) return `${p[0]}年${p[1]}月${p[2]}日`;
-        if (p.length === 2) return `${p[0]}年${p[1]}月`;
-        return s;
+    const parsePart = (part, context = {}) => {
+        const segments = part.split('/');
+        let y = context.y, m = context.m, d = context.d;
+
+        if (segments.length === 3) {
+            y = segments[0]; m = segments[1]; d = segments[2];
+        } else if (segments.length === 2) {
+            if (segments[0].length === 4) {
+                y = segments[0]; m = segments[1]; d = null;
+            } else {
+                m = segments[0]; d = segments[1];
+            }
+        } else if (segments.length === 1) {
+            d = segments[0];
+        }
+        return { y, m, d };
     };
 
-    // 範囲指定（-）が含まれる場合
+    const stringify = (obj) => {
+        let res = "";
+        if (obj.y) res += obj.y + "年";
+        if (obj.m) res += obj.m + "月";
+        if (obj.d) res += obj.d + "日";
+        return res;
+    };
+
     if (dateStr.includes('-')) {
         const parts = dateStr.split('-');
-        const start = parts[0];
-        const end = parts[1];
-
-        // パターン：2025/12/31-2026/1/1
-        if (end.includes('/')) {
-            return `${conv(start)}~${conv(end)}`;
-        } 
-        // パターン：2025/11/7-8
-        else {
-            const startParts = start.split('/');
-            if (startParts.length === 3) {
-                return `${conv(start)}~${end}日`;
-            }
-            return `${conv(start)}~${end}`;
-        }
+        const start = parsePart(parts[0]);
+        const end = parsePart(parts[1], start);
+        return stringify(start) + "~" + stringify(end);
+    } else {
+        return stringify(parsePart(dateStr));
     }
-
-    return conv(dateStr);
 }
 
 function getStampsHTML(stampStr, className, folder = 'stamp') {
@@ -296,7 +301,6 @@ function renderDetail(name) {
         hList.innerHTML += `<div class="history-item"><div class="history-top-row"><div class="history-date">${formatDateJP(d)}</div><div class="history-stamp-container">${getStampsHTML(s,'history-stamp','history')}</div></div><div class="history-desc">${t}</div></div>`;
     };
 
-    // --- 車歴ロジック ---
     const shinseiText = `${top["新製(記述)"] || ''}${top.新製配置 || ''}に配置。`;
 
     // 1. 落成
@@ -312,8 +316,8 @@ function renderDetail(name) {
     if (top.甲種輸送日) {
         addH(top.甲種輸送日, 'kosyu', shinseiText);
     } 
-    // 3. 新製配給（甲種がなく配給がある場合、または独立表示）
-    else if (top.新製配給日) {
+    // 3. 新製配給（独立表示）
+    if (top.新製配給日) {
         addH(top.新製配給日, 'haikyu', shinseiText);
     }
 
