--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>編成表</title>
+    <title>鉄道車両編成表・車歴表</title>
+    <link rel="icon" href="icon.png">
+
     <style>
         :root { 
             --header-bg: #1c1c1c; 
