--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>鉄道車両編成表・車歴表</title>
     <link rel="icon" href="icon.png">
+    <link rel="apple-touch-icon" href="icon.png">
 
     <style>
         :root { 
