--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    
+     <meta name="theme-color" content="#1c1c1c">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <meta name="apple-mobile-web-app-title" content="編成表･車歴表">
